{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 34,
  "lineage": "4ea6ccd7-4046-bc5c-3423-a1e58dde2b7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vprofile-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vprofile-backend-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vprofile-bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:security-group/sg-0db54655dcc42e2d8",
            "description": "Security group for bastionisioner ec2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db54655dcc42e2d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "102.67.21.239/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vprofile-bastion-sg",
            "name_prefix": "",
            "owner_id": "206080409328",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vprofile-bean-elb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:security-group/sg-067358af0797a01c5",
            "description": "Security group for bean-elb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067358af0797a01c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vprofile-bean-elb-sg",
            "name_prefix": "",
            "owner_id": "206080409328",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vprofile-prod-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:security-group/sg-0c6552bb9993d0cf8",
            "description": "Security group for beanstalk instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c6552bb9993d0cf8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0db54655dcc42e2d8"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vprofile-prod-sg",
            "name_prefix": "",
            "owner_id": "206080409328",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vprofile-bastion-sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "sec_group_allow_itself",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:network-acl/acl-082c347180e399026",
            "default_network_acl_id": "acl-082c347180e399026",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-082c347180e399026",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "206080409328",
            "subnet_ids": [
              "subnet-0039b64dcb8ad1222",
              "subnet-017614fc86f7c030d",
              "subnet-0aa34f31769747493",
              "subnet-0b47f95cfede6287a",
              "subnet-0c5ee888515d5e56a",
              "subnet-0ef562569cff0d519"
            ],
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:route-table/rtb-01bfaaa4e52a23750",
            "default_route_table_id": "rtb-01bfaaa4e52a23750",
            "id": "rtb-01bfaaa4e52a23750",
            "owner_id": "206080409328",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:security-group/sg-09d50be5842f3f094",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-09d50be5842f3f094",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "206080409328",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-default",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fddb7db1785146a",
            "domain": "vpc",
            "id": "eipalloc-04fddb7db1785146a",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-21-152-92.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.152.92",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:internet-gateway/igw-0d8b0d5cdf2d36a81",
            "id": "igw-0d8b0d5cdf2d36a81",
            "owner_id": "206080409328",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fddb7db1785146a",
            "association_id": "eipassoc-0795cf5e4320b9907",
            "connectivity_type": "public",
            "id": "nat-024a6166d0e2e7302",
            "network_interface_id": "eni-0172a04c10660b0ab",
            "private_ip": "172.21.1.81",
            "public_ip": "3.21.152.92",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c5ee888515d5e56a",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d8b0d5cdf2d36a81",
            "id": "r-rtb-01f728cfbac6473971080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f728cfbac647397",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:route-table/rtb-09460f855fea0c192",
            "id": "rtb-09460f855fea0c192",
            "owner_id": "206080409328",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:route-table/rtb-01f728cfbac647397",
            "id": "rtb-01f728cfbac647397",
            "owner_id": "206080409328",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be64e55217e07a73",
            "route_table_id": "rtb-09460f855fea0c192",
            "subnet_id": "subnet-0ef562569cff0d519"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0fddafef776b681",
            "route_table_id": "rtb-09460f855fea0c192",
            "subnet_id": "subnet-0b47f95cfede6287a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9079617a2a9fd12",
            "route_table_id": "rtb-09460f855fea0c192",
            "subnet_id": "subnet-0aa34f31769747493"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e1783bb97b8b957",
            "route_table_id": "rtb-01f728cfbac647397",
            "subnet_id": "subnet-0c5ee888515d5e56a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c46486945e77670",
            "route_table_id": "rtb-01f728cfbac647397",
            "subnet_id": "subnet-017614fc86f7c030d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002dd6da765fa9bde",
            "route_table_id": "rtb-01f728cfbac647397",
            "subnet_id": "subnet-0039b64dcb8ad1222"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:subnet/subnet-0ef562569cff0d519",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.21.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef562569cff0d519",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206080409328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:subnet/subnet-0b47f95cfede6287a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.21.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b47f95cfede6287a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206080409328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:subnet/subnet-0aa34f31769747493",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.21.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa34f31769747493",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206080409328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-private-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:subnet/subnet-0c5ee888515d5e56a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.21.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5ee888515d5e56a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206080409328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:subnet/subnet-017614fc86f7c030d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.21.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017614fc86f7c030d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206080409328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:subnet/subnet-0039b64dcb8ad1222",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.21.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0039b64dcb8ad1222",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "206080409328",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC-public-us-east-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-081c30d59e894f1c9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:206080409328:vpc/vpc-081c30d59e894f1c9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-082c347180e399026",
            "default_route_table_id": "rtb-01bfaaa4e52a23750",
            "default_security_group_id": "sg-09d50be5842f3f094",
            "dhcp_options_id": "dopt-00eb11e3a952fcb28",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-081c30d59e894f1c9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01bfaaa4e52a23750",
            "owner_id": "206080409328",
            "tags": {
              "Environment": "Prod",
              "Name": "vprofile-VPC",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "Prod",
              "Name": "vprofile-VPC",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}